// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`outlet > root using _layout element 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        _root
      </div>
      <div>
        _layout
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > root using _layout elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        _root
      </div>
      <div>
        Main#_layout
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using "_index" element 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        _layout
      </div>
      <div>
        _index
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using "_index" elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        _layout
      </div>
      <div>
        Next#_index
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using "_layout" element 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        _layout
      </div>
      <div>
        <div>
          _layout
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using "_layout" elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        _layout
      </div>
      <div>
        <div>
          Next#_layout
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using "_void" element 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      _void
    </div>
  </div>
</div>
`;

exports[`outlet > using "_void" elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      _void
    </div>
  </div>
</div>
`;

exports[`outlet > using _index element 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        _layout
      </div>
      <div>
        _index
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using _index elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        _layout
      </div>
      <div>
        Next#_index
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using _layout element 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        _layout
      </div>
      <div>
        <div>
          _layout
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using _layout elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        _layout
      </div>
      <div>
        <div>
          Next#_layout
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using _void element 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      _void
    </div>
  </div>
</div>
`;

exports[`outlet > using _void elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      _void
    </div>
  </div>
</div>
`;

exports[`outlet > using here "_layout" element 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        _root
      </div>
      <div>
        _layout
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using here "_layout" elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        _root
      </div>
      <div>
        Main#_layout
      </div>
    </div>
  </div>
</div>
`;
